compiler/tools/fpp-check/test/invalid_symbols/module_as_component_instance.fpp
module M {

  topology T {

    instance M

  }

}
